Fix notice position z-index

--- a/app/javascript/packs/print.scss
+++ b/app/javascript/packs/print.scss
@@ -20,7 +20,7 @@ section {
   .note-readers,
   .between-docs,
   .atwho-container,
-  .notice-wrap,
+  .navbar-notice,
   .footer,
   .heading-anchor { display: none !important; }
   h1.doc-title { text-align: center; }
